# 1h00-distributedjson

./: CMakeLists.txt
src/: filewatch.hpp  main.cpp
